--- a/bi_qr_generator/ReadME
+++ b/bi_qr_generator/ReadME
@@ -7,3 +7,6 @@ Date :- 17th march 2022.
 version:-15.0.0.2
 issue points:-
     resolve issue of installement
+
+Version 15.0.0.3 : (18/08/22)
+    - Change qr_code filed for auto update when change into product template change into product product.
